--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -9,10 +9,22 @@ quarkus.grpc.server.test-port=9101
 quarkus.http.port=8180
 quarkus.http.test-port=8181
 
-quarkus.datasource.db-kind=h2
-quarkus.datasource.username=sa
-quarkus.datasource.password=sa
-quarkus.datasource.jdbc.url=jdbc:h2:mem:student-info;DB_CLOSE_DELAY=-1
+# For Non-reactive version
+# quarkus.datasource.db-kind=h2
+# quarkus.datasource.username=sa
+# quarkus.datasource.password=sa
+# quarkus.datasource.jdbc.url=jdbc:h2:mem:student-info;DB_CLOSE_DELAY=-1
+
+# For Reactive version 
+# working only with postgres, mariadb, mysql, db2
+quarkus.datasource.db-kind=mariadb
+# required this if we have only reactive jdbc
+quarkus.datasource.jdbc=false
+
+quarkus.datasource.username=quarkus_test
+quarkus.datasource.password=quarkus_test
+quarkus.datasource.reactive.url=mariadb://localhost:3306/quarkus_test
+
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
