--- a/resultService/src/main/resources/application.properties
+++ b/resultService/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 quarkus.grpc.server.enable-reflection-service=true
+quarkus.grpc.server.ssl.certificate=tls/server.pem
+quarkus.grpc.server.ssl.key=tls/server.key
 
 quarkus.grpc.clients.student.host=localhost
 quarkus.grpc.clients.student.port=9100
+quarkus.grpc.clients.student.ssl.trust-store=tls/ca.pem
 %test.quarkus.grpc.clients.stuent.port=9101
 
 quarkus.datasource.db-kind=h2
