--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -1,13 +1,16 @@
-quarkus.grpc.clients.result.host=localhost
-# quarkus.grpc.clients.result.port=9000
+quarkus.http.port=8180
+quarkus.http.test-port=8181
 
-%test.quarkus.grpc.clients.result.port=9001
 quarkus.grpc.server.enable-reflection-service=true
 quarkus.grpc.server.port=9100
 quarkus.grpc.server.test-port=9101
+quarkus.grpc.server.ssl.certificate=tls/server.pem
+quarkus.grpc.server.ssl.key=tls/server.key
 
-quarkus.http.port=8180
-quarkus.http.test-port=8181
+quarkus.grpc.clients.result.host=localhost
+# quarkus.grpc.clients.result.port=9000
+quarkus.grpc.clients.result.ssl.trust-store=tls/ca.pem
+%test.quarkus.grpc.clients.result.port=9001
 
 # For Non-reactive version
 # quarkus.datasource.db-kind=h2
