change from dockerRun to dockerCompose, adding keycloak

--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -6,10 +6,19 @@ quarkus.grpc.server.port=9100
 quarkus.grpc.server.test-port=9101
 quarkus.grpc.server.ssl.certificate=tls/server.pem
 quarkus.grpc.server.ssl.key=tls/server.key
+# quarkus.grpc.server.ssl.trust-store=tls/ca.pem
+# quarkus.grpc.server.ssl.trust-store=tls/ca.jks
+# quarkus.grpc.server.ssl.trust-store-password=*****
+# quarkus.grpc.server.ssl.client-auth=REQUIRED
 
 quarkus.grpc.clients.result.host=localhost
 # quarkus.grpc.clients.result.port=9000
 quarkus.grpc.clients.result.ssl.trust-store=tls/ca.pem
+# quarkus.grpc.clients.result.plain-text=false
+# quarkus.grpc.clients.result.ssl.certificate=tls/server.pem
+# quarkus.grpc.clients.result.ssl.key=tls/server.key
+
+
 %test.quarkus.grpc.clients.result.port=9001
 
 # For Non-reactive version
