--- a/resultService/src/main/resources/application.properties
+++ b/resultService/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 quarkus.grpc.server.enable-reflection-service=true
 quarkus.grpc.server.ssl.certificate=tls/server.pem
 quarkus.grpc.server.ssl.key=tls/server.key
+# quarkus.grpc.server.ssl.trust-store=tls/ca.pem
+# quarkus.grpc.server.ssl.trust-store=tls/ca.jks
+# quarkus.grpc.server.ssl.trust-store-password=*****
+# quarkus.grpc.server.ssl.client-auth=REQUIRED
 
 quarkus.grpc.clients.student.host=localhost
 quarkus.grpc.clients.student.port=9100
 quarkus.grpc.clients.student.ssl.trust-store=tls/ca.pem
+# quarkus.grpc.clients.student.plain-text=false
+# quarkus.grpc.clients.student.ssl.certificate=tls/server.pem
+# quarkus.grpc.clients.student.ssl.key=tls/server.key
+
 %test.quarkus.grpc.clients.stuent.port=9101
 
 quarkus.datasource.db-kind=h2
