--- a/studentService/.env
+++ b/studentService/.env
@@ -5,5 +5,7 @@ MYSQL_USER=quarkus_test
 MYSQL_PASSWORD=quarkus_test
 
 #AUTHSERVER CONFIG
+KEYCLOAK_HOST=localhost
+KEYCLOAK_PORT=8180
 KEYCLOAK_USER=admin
 KEYCLOAK_PASSWORD=admin
