--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -18,14 +18,7 @@ quarkus.grpc.clients.result.ssl.trust-store=tls/ca.pem
 # quarkus.grpc.clients.result.ssl.certificate=tls/server.pem
 # quarkus.grpc.clients.result.ssl.key=tls/server.key
 
-
 %test.quarkus.grpc.clients.result.port=9001
-
-# For Non-reactive version
-# quarkus.datasource.db-kind=h2
-# quarkus.datasource.username=sa
-# quarkus.datasource.password=sa
-# quarkus.datasource.jdbc.url=jdbc:h2:mem:student-info;DB_CLOSE_DELAY=-1
 
 # For Reactive version 
 # working only with postgres, mariadb, mysql, db2
@@ -37,7 +30,9 @@ quarkus.datasource.username=quarkus_test
 quarkus.datasource.password=quarkus_test
 quarkus.datasource.reactive.url=mariadb://localhost:3306/quarkus_test
 
-
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=data.sql
+
+quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/studentgrade-realm
+quarkus.oidc.client-id=studentgrade-service
