add authentication code

--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -34,5 +34,15 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=data.sql
 
-quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/studentgrade-realm
-quarkus.oidc.client-id=studentgrade-service
+# quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/studentgrade-realm
+# quarkus.oidc.client-id=studentgrade-service
+# quarkus.oidc.credentials.secret=b42798bb-a61d-4874-a959-643c7d4f1d81
+# quarkus.oidc.user-info-required=true
+
+quarkus.oidc-client.auth-server-url=http://localhost:8180/auth/realms/studentgrade-realm
+quarkus.oidc-client.client-id=studentgrade-service
+quarkus.oidc-client.credentials.secret=b42798bb-a61d-4874-a959-643c7d4f1d81
+quarkus.oidc-client.token-path=/tokens
+quarkus.oidc-client.grant.type=password
+# quarkus.oidc-client.grant-options.password.username=st1
+# quarkus.oidc-client.grant-options.password.password=st1
