--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -47,4 +47,5 @@ quarkus.oidc.user-info-required=true
 # quarkus.oidc-client.grant-options.password.username=st1
 # quarkus.oidc-client.grant-options.password.password=st1
 
-com.students_information.stubs.student.StudentService/getStudentInfo.rolesAllowed=student
+# Roles Allowed
+com.students_information.stubs.student.StudentService/getStudentInfo.rolesAllowed=student,teacher
