--- a/resultService/src/main/resources/application.properties
+++ b/resultService/src/main/resources/application.properties
@@ -23,3 +23,6 @@ quarkus.datasource.jdbc.url=jdbc:h2:mem:result-info;DB_CLOSE_DELAY=-1
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=data.sql
+
+# Roles Allowed
+com.students_information.stubs.result.ResultService/getResultForStudent.rolesAllowed=student,teacher
