add oidc settings

--- a/resultService/src/main/resources/application.properties
+++ b/resultService/src/main/resources/application.properties
@@ -15,6 +15,12 @@ quarkus.grpc.clients.student.ssl.trust-store=tls/ca.pem
 
 %test.quarkus.grpc.clients.stuent.port=9101
 
+quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/studentgrade-realm
+quarkus.oidc.discovery-enabled=true
+quarkus.oidc.client-id=studentgrade-service
+quarkus.oidc.credentials.secret=30337997-8519-4eb7-928d-1322fba687c5
+quarkus.oidc.user-info-required=true
+
 quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
 quarkus.datasource.password=sa
