--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -35,6 +35,7 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=data.sql
 
 quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/studentgrade-realm
+quarkus.oidc.discovery-enabled=true
 quarkus.oidc.client-id=studentgrade-service
 quarkus.oidc.credentials.secret=30337997-8519-4eb7-928d-1322fba687c5
 quarkus.oidc.user-info-required=true
