add studentService listAll

--- a/resultService/src/main/resources/application.properties
+++ b/resultService/src/main/resources/application.properties
@@ -31,4 +31,4 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=data.sql
 
 # Roles Allowed
-com.students_information.stubs.result.ResultService/getResultForStudent.rolesAllowed=student,teacher
+com.students_information.stubs.result.ResultService/read.rolesAllowed=student,teacher
