--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -48,5 +48,8 @@ quarkus.oidc.user-info-required=true
 # quarkus.oidc-client.grant-options.password.username=st1
 # quarkus.oidc-client.grant-options.password.password=st1
 
+# relam prefix
+realm.prefix=studentgrade-
+
 # Roles Allowed
 com.students_information.stubs.student.StudentService/getStudentInfo.rolesAllowed=student,teacher
