--- a/resultService/src/main/resources/application.properties
+++ b/resultService/src/main/resources/application.properties
@@ -15,7 +15,7 @@ quarkus.grpc.clients.student.ssl.trust-store=tls/ca.pem
 
 %test.quarkus.grpc.clients.stuent.port=9101
 
-quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/studentgrade-realm
+quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/studentgrade-abc
 quarkus.oidc.discovery-enabled=true
 quarkus.oidc.client-id=studentgrade-service
 quarkus.oidc.credentials.secret=30337997-8519-4eb7-928d-1322fba687c5
@@ -29,6 +29,9 @@ quarkus.datasource.jdbc.url=jdbc:h2:mem:result-info;DB_CLOSE_DELAY=-1
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=data.sql
+
+# relam prefix
+realm.prefix=studentgrade-
 
 # Roles Allowed
 com.students_information.stubs.result.ResultService/read.rolesAllowed=student,teacher
