validate issuer wher authentication, add realm.clientId in config

--- a/resultService/src/main/resources/application.properties
+++ b/resultService/src/main/resources/application.properties
@@ -32,6 +32,7 @@ quarkus.hibernate-orm.sql-load-script=data.sql
 
 # relam prefix
 realm.prefix=studentgrade-
+realm.clientId=studentgrade-service
 
 # Roles Allowed
 com.students_information.stubs.result.ResultService/read.rolesAllowed=student,teacher
