--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -50,6 +50,7 @@ quarkus.oidc.user-info-required=true
 
 # relam prefix
 realm.prefix=studentgrade-
+realm.clientId=studentgrade-service
 
 # Roles Allowed
 com.students_information.stubs.student.StudentService/getStudentInfo.rolesAllowed=student,teacher
