Repackaging for messaging

--- a/resultService/src/main/resources/application.properties
+++ b/resultService/src/main/resources/application.properties
@@ -30,9 +30,15 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=data.sql
 
+# %prod.kafka.bootstrap.servers=kafka:9092
+# Configure the Kafka sink (we write to it)
+# mp.messaging.outgoing.out-grades.connector=smallrye-kafka
+# mp.messaging.outgoing.out-grades.topic=grades
+# mp.messaging.outgoing.out-grades.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+
 # relam prefix
 realm.prefix=studentgrade-
 realm.clientId=studentgrade-service
 
 # Roles Allowed
-com.students_information.stubs.result.ResultService/read.rolesAllowed=student,teacher
+com.students_information.result.stubs.ResultService/read.rolesAllowed=student,teacher
