--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -53,4 +53,4 @@ realm.prefix=studentgrade-
 realm.clientId=studentgrade-service
 
 # Roles Allowed
-com.students_information.stubs.student.StudentService/getStudentInfo.rolesAllowed=student,teacher
+com.students_information.student.stubs.StudentService/getStudentInfo.rolesAllowed=student,teacher
