--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -48,6 +48,9 @@ quarkus.oidc.user-info-required=true
 # quarkus.oidc-client.grant-options.password.username=st1
 # quarkus.oidc-client.grant-options.password.password=st1
 
+quarkus.vertx.max-event-loop-execute-time=8000
+
+
 # relam prefix
 realm.prefix=studentgrade-
 realm.clientId=studentgrade-service
