add kafka on create

--- a/resultService/src/main/resources/application.properties
+++ b/resultService/src/main/resources/application.properties
@@ -30,11 +30,17 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=data.sql
 
+quarkus.vertx.max-event-loop-execute-time=8000
+
+quarkus.kafka.devservices.port=9092
+#kafka.bootstrap.servers=localhost:9092
+
 # %prod.kafka.bootstrap.servers=kafka:9092
+
 # Configure the Kafka sink (we write to it)
-# mp.messaging.outgoing.out-grades.connector=smallrye-kafka
-# mp.messaging.outgoing.out-grades.topic=grades
-# mp.messaging.outgoing.out-grades.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+mp.messaging.outgoing.out-grades.connector=smallrye-kafka
+mp.messaging.outgoing.out-grades.topic=grades
+mp.messaging.outgoing.out-grades.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
 
 # relam prefix
 realm.prefix=studentgrade-
