--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -50,6 +50,15 @@ quarkus.oidc.user-info-required=true
 
 quarkus.vertx.max-event-loop-execute-time=8000
 
+#We will use the same one in resultService, so disable this one.
+quarkus.kafka.devservices.enabled=false
+
+kafka.bootstrap.servers=localhost:9092
+
+# Configure the incoming `quote-requests` Kafka topic
+mp.messaging.incoming.in-grades.connector=smallrye-kafka
+mp.messaging.incoming.in-grades.topic=grades
+mp.messaging.incoming.in-grades.auto.offset.reset=earliest
 
 # relam prefix
 realm.prefix=studentgrade-
