get rid of dao classes

--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -31,6 +31,8 @@ quarkus.datasource.password=quarkus_test
 quarkus.datasource.reactive.url=mariadb://localhost:3306/quarkus_test
 
 quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.dialect=org.hibernate.dialect.MySQL8Dialect
+quarkus.hibernate-orm.dialect.storage-engine=InnoDb
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=data.sql
 
