--- a/studentService/.env
+++ b/studentService/.env
@@ -6,6 +6,7 @@ MYSQL_PASSWORD=quarkus_test
 
 #AUTHSERVER CONFIG
 KEYCLOAK_HOST=localhost
-KEYCLOAK_PORT=8180
+KEYCLOAK_HTTP_PORT=8080
+KEYCLOAK_HTTPS_PORT=8443
 KEYCLOAK_USER=admin
 KEYCLOAK_PASSWORD=admin
