--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -2,10 +2,14 @@ quarkus.http.port=8280
 quarkus.http.test-port=8281
 
 quarkus.grpc.server.enable-reflection-service=true
-quarkus.grpc.server.port=9100
-quarkus.grpc.server.test-port=9101
-quarkus.grpc.server.ssl.certificate=tls/server.pem
-quarkus.grpc.server.ssl.key=tls/server.key
+quarkus.grpc.server.port=9200
+quarkus.grpc.server.test-port=9201
+quarkus.grpc.server.ssl.certificate=tls/tls.crt
+quarkus.grpc.server.ssl.key=tls/tls.key
+
+# quarkus.grpc.server.ssl.certificate=tls/server.pem
+# quarkus.grpc.server.ssl.key=tls/server.key
+
 # quarkus.grpc.server.ssl.trust-store=tls/ca.pem
 # quarkus.grpc.server.ssl.trust-store=tls/ca.jks
 # quarkus.grpc.server.ssl.trust-store-password=*****
@@ -36,10 +40,11 @@ quarkus.hibernate-orm.dialect.storage-engine=InnoDb
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=data.sql
 
-quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/studentgrade-realm
+#quarkus.oidc.auth-server-url=https://localhost:8443/auth/realms/studentgrade-realm
+quarkus.oidc.auth-server-url=https://auth.figker.com:8443/auth/realms/studentgrade-realm
 quarkus.oidc.discovery-enabled=true
 quarkus.oidc.client-id=studentgrade-service
-quarkus.oidc.credentials.secret=30337997-8519-4eb7-928d-1322fba687c5
+#quarkus.oidc.credentials.secret=30337997-8519-4eb7-928d-1322fba687c5
 quarkus.oidc.user-info-required=true
 
 # quarkus.oidc-client.auth-server-url=http://localhost:8180/auth/realms/studentgrade-realm
