--- a/resultService/src/main/resources/application.properties
+++ b/resultService/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 quarkus.grpc.server.enable-reflection-service=true
-quarkus.grpc.server.ssl.certificate=tls/server.pem
-quarkus.grpc.server.ssl.key=tls/server.key
+quarkus.grpc.server.ssl.certificate=tls/tls.crt
+quarkus.grpc.server.ssl.key=tls/tls.key
+
+# quarkus.grpc.server.ssl.certificate=tls/server.pem
+# quarkus.grpc.server.ssl.key=tls/server.key
+
 # quarkus.grpc.server.ssl.trust-store=tls/ca.pem
 # quarkus.grpc.server.ssl.trust-store=tls/ca.jks
 # quarkus.grpc.server.ssl.trust-store-password=*****
@@ -15,10 +19,15 @@ quarkus.grpc.clients.student.ssl.trust-store=tls/ca.pem
 
 %test.quarkus.grpc.clients.stuent.port=9101
 
-quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/studentgrade-abc
+# quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/studentgrade-abc
+# quarkus.oidc.discovery-enabled=true
+# quarkus.oidc.client-id=studentgrade-service
+# quarkus.oidc.credentials.secret=30337997-8519-4eb7-928d-1322fba687c5
+# quarkus.oidc.user-info-required=true
+
+quarkus.oidc.auth-server-url=https://auth.figker.com:8443/auth/realms/studentgrade-realm
 quarkus.oidc.discovery-enabled=true
 quarkus.oidc.client-id=studentgrade-service
-quarkus.oidc.credentials.secret=30337997-8519-4eb7-928d-1322fba687c5
 quarkus.oidc.user-info-required=true
 
 quarkus.datasource.db-kind=h2
