--- a/studentService/deployment/proxy/envoy.yaml
+++ b/studentService/deployment/proxy/envoy.yaml
@@ -51,7 +51,7 @@ static_resources:
             - endpoint:
                 address:
                   socket_address:
-                    address: 192.168.1.57
+                    address: 192.168.1.57 #change your address here (ifconfig)
                     port_value: 9200
     transport_socket:
       name: envoy.transport_sockets.tls
