move StudentPK from common to studentService

--- a/resultService/src/main/resources/application.properties
+++ b/resultService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 quarkus.grpc.server.enable-reflection-service=true
-quarkus.grpc.server.ssl.certificate=tls/tls.crt
-quarkus.grpc.server.ssl.key=tls/tls.key
+# COMMENT FOR NOW 23/01/2022 quarkus.grpc.server.ssl.certificate=tls/tls.crt
+# COMMENT FOR NOW 23/01/2022 quarkus.grpc.server.ssl.key=tls/tls.key
 
 # quarkus.grpc.server.ssl.certificate=tls/server.pem
 # quarkus.grpc.server.ssl.key=tls/server.key
@@ -12,10 +12,7 @@ quarkus.grpc.server.ssl.key=tls/tls.key
 
 quarkus.grpc.clients.student.host=localhost
 quarkus.grpc.clients.student.port=9100
-quarkus.grpc.clients.student.ssl.trust-store=tls/ca.pem
-# quarkus.grpc.clients.student.plain-text=false
-# quarkus.grpc.clients.student.ssl.certificate=tls/server.pem
-# quarkus.grpc.clients.student.ssl.key=tls/server.key
+# COMMENT FOR NOW 23/01/2022 quarkus.grpc.clients.student.ssl.trust-store=tls/ca.pem
 
 %test.quarkus.grpc.clients.stuent.port=9101
 
@@ -36,6 +33,7 @@ quarkus.datasource.password=sa
 quarkus.datasource.jdbc.url=jdbc:h2:mem:result-info;DB_CLOSE_DELAY=-1
 
 quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.scripts.generation.create-target=resultService.sql
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=data.sql
 
