--- a/studentService/src/main/resources/application.properties
+++ b/studentService/src/main/resources/application.properties
@@ -4,23 +4,11 @@ quarkus.http.test-port=8281
 quarkus.grpc.server.enable-reflection-service=true
 quarkus.grpc.server.port=9200
 quarkus.grpc.server.test-port=9201
-quarkus.grpc.server.ssl.certificate=tls/tls.crt
-quarkus.grpc.server.ssl.key=tls/tls.key
-
-# quarkus.grpc.server.ssl.certificate=tls/server.pem
-# quarkus.grpc.server.ssl.key=tls/server.key
-
-# quarkus.grpc.server.ssl.trust-store=tls/ca.pem
-# quarkus.grpc.server.ssl.trust-store=tls/ca.jks
-# quarkus.grpc.server.ssl.trust-store-password=*****
-# quarkus.grpc.server.ssl.client-auth=REQUIRED
+# COMMENT FOR NOW 23/01/2022 quarkus.grpc.server.ssl.certificate=tls/tls.crt
+# COMMENT FOR NOW 23/01/2022 quarkus.grpc.server.ssl.key=tls/tls.key
 
 quarkus.grpc.clients.result.host=localhost
-# quarkus.grpc.clients.result.port=9000
-quarkus.grpc.clients.result.ssl.trust-store=tls/ca.pem
-# quarkus.grpc.clients.result.plain-text=false
-# quarkus.grpc.clients.result.ssl.certificate=tls/server.pem
-# quarkus.grpc.clients.result.ssl.key=tls/server.key
+# COMMENT FOR NOW 23/01/2022 quarkus.grpc.clients.result.ssl.trust-store=tls/ca.pem
 
 %test.quarkus.grpc.clients.result.port=9001
 
@@ -35,6 +23,7 @@ quarkus.datasource.password=quarkus_test
 quarkus.datasource.reactive.url=mariadb://localhost:3306/quarkus_test
 
 quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.scripts.generation=drop-and-create
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.MySQL8Dialect
 quarkus.hibernate-orm.dialect.storage-engine=InnoDb
 quarkus.hibernate-orm.log.sql=true
